--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,200 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
-
-
 ## Loading and preprocessing the data
 
+I downloaded the zipped data from the site and unzipped in my working directory.
 
+I set the working directory for the R using the following command
+```{r echo=TRUE}
+setwd("/users/dipendra/desktop/coursera/RepData_PeerAssessment1")
+```
+
+Next, Read the data from the csv file and store that in a variable named 'data'.
+
+```{r echo=TRUE}
+data <- read.csv("activity.csv")
+dim (data)
+```
+
+Create dataset excluding the missing values (NA)
+```{r echo=TRUE}
+subdata = data[!is.na(data$steps), ]
+dim(subdata)
+```
 
 ## What is mean total number of steps taken per day?
 
+Ignoring the missing values in the dataset
 
+1. Making a histogram of the total number of steps taken each day
+
+```{r echo=TRUE}
+#group for day
+num.steps.date <- aggregate(subdata$steps, list(subdata$date), sum)
+colnames(num.steps.date) <- c("date", "steps")
+
+library(ggplot2)
+#hist
+ggplot(data=num.steps.date, aes(x=steps)) +
+  geom_histogram(fill="#800080") +  
+  ggtitle("Steps Taken per Day") +
+  labs(x="Number of Steps per Day", y="Number of times in a day")
+```
+
+2. Calculating and reporting the mean and median total number of steps taken per day
+
+```{r echo=TRUE}
+#mean
+steps_mean   <- mean(num.steps.date$steps)
+steps_mean
+
+#median
+steps_median <- median(num.steps.date$steps)
+steps_median
+
+```
 
 ## What is the average daily activity pattern?
+1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
+```{r echo=TRUE}
+steps_per_interval <- aggregate(subdata$steps, 
+                                by = list(interval = as.factor(subdata$interval)),
+                                FUN=mean, na.rm=TRUE)
+                        
+steps_per_interval$interval <- 
+        as.integer(levels(steps_per_interval$interval)[steps_per_interval$interval])
 
+colnames(steps_per_interval) <- c("interval", "steps")
+            
+ggplot(data=steps_per_interval, aes(x=interval, y=steps)) + 
+    geom_line()
+```
+
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{r echo = TRUE}
+#Maximum interval
+max_interval <- steps_per_interval[which.max(steps_per_interval$steps),]
+max_interval
+
+```
 
 ## Imputing missing values
 
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+
+```{r echo= TRUE}
+vals.is.na <- sum(is.na(data$steps))
+vals.is.na
+
+```
+
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+```{r echo= TRUE}
+#average number of steps as a function of range
+steps.iterval <- aggregate(steps ~ interval, data , FUN = mean)
+
+head(data)
+
+#change value NA
+for (i in 1:nrow(data)){
+     tmp <- data$steps[i]
+     if(is.na(tmp)){
+         for(j in 1:nrow(steps.iterval)){
+             if(data$interval[i] == steps.iterval$interval[j]){
+                 data$steps[i] = steps.iterval$steps[j]
+                 break
+             }
+         }
+     }  
+ }
+
+head(data)
+
+```
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+```{r echo= TRUE}
+#group for day
+new.num.steps.date <- aggregate(data$steps, list(data$date), sum)
+colnames(new.num.steps.date) <- c("date", "steps")
+
+library(ggplot2)
+#create hist
+ggplot(data=new.num.steps.date, aes(x=steps)) +
+  geom_histogram(fill="#880011") +  
+  ggtitle("Steps Taken per Day") +
+  labs(x="Number of Steps per Day", y="Number of times in a day")
+
+```
+
+4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+```{r echo= TRUE}
+#mean 
+new_steps_mean   <- mean(new.num.steps.date$steps)
+new_steps_mean
+
+# median
+new_steps_median <- median(new.num.steps.date$steps)
+new_steps_median
+
+new_steps_per_interval <- aggregate(data$steps, 
+                                by = list(interval = as.factor(data$interval)),
+                                FUN=mean, na.rm=TRUE)
+                        
+new_steps_per_interval$interval <- 
+        as.integer(levels(new_steps_per_interval$interval)[new_steps_per_interval$interval])
+
+colnames(new_steps_per_interval) <- c("interval", "steps")
+            
+ggplot(data=new_steps_per_interval, aes(x=interval, y=steps)) + 
+    geom_line()
+
+
+
+max_interval <- new_steps_per_interval[which.max(new_steps_per_interval$steps),]
+max_interval
+
+```
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+1. Create a new factor variable in the dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+
+```{r echo= TRUE}
+# convert date from string to Date class
+data$date <- as.Date(data$date, "%Y-%m-%d")
+
+# add a new column indicating day of the week 
+data$day <- weekdays(data$date)
+
+# add a new column called day type and initialize to weekday
+data$day_type <- c("weekday")
+
+# If day is Saturday or Sunday, make day_type as weekend
+for (i in 1:nrow(data)){
+  if (data$day[i] == "Saturday" || data$day[i] == "Sunday"){
+    data$day_type[i] <- "weekend"
+  }
+}
+
+# convert day_time from character to factor
+data$day_type <- as.factor(data$day_type)
+
+# aggregate steps as interval to get average number of steps in an interval across all days
+table_interval_steps_imputed <- aggregate(steps ~ interval+day_type, data, mean)
+
+```
+
+2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using simulated data:
+```{r echo= TRUE}
+# make the panel plot for weekdays and weekends
+
+library(ggplot2)
+
+qplot(interval, steps, data=table_interval_steps_imputed, geom=c("line"), xlab="Interval", 
+      ylab="Number of steps", main="") + facet_wrap(~ day_type, ncol=1)
+
+```
